--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<p class="p1">Number 1 - I'm a class!</p>
+		<p class="paragraph">Number 1 - I'm a class!</p>
 		<div class="div2">Number 2 - I'm one ID.</div>
-		<p class="p3">Number 3 - I'm a class, but cooler!</p>
+		<p class="paragraph">Number 3 - I'm a class, but cooler!</p>
 		<div class="div4">Number 4 - I'm another ID.</div>
-		<p class="p5">Number 5 - I'm a class!</p>
+		<p class="paragraph">Number 5 - I'm a class!</p>
 	</body>
 </html>
